# To-ASCII

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: checks.yml  ci.yml  flake8.yml
2ascii/: Constants.py  Viewer.py  __init__.py
examples/: image.py  live_video.py  live_video_nim.py  test.py  video.py
toascii/: ABC.py  CLI.py  Constants.py  Image.py  Live.py  Video.py  Viewer.py  __init__.py  asciifier.py  cli.py  converter.py  gradients.py  image.py  live.py  media_source.py  video.py
toascii/cli/: args.py  cli.py
toascii/converters/: __init__.py  base_converter.py  color_converter.py  grayscale_converter.py  html_color_converter.py  options.py
toascii/converters/extensions/: color_converter.nim  color_converter_nim.py  converter_utils.nim  extension_utils.py  grayscale_converter.nim  grayscale_converter_nim.py  html_color_converter.nim  html_color_converter_nim.py  nim.cfg  nimpy_numpy.nim  unsupported_extension.py
toascii/extensions/: color_converter.nim  color_converter_nim.py
video2ascii/: Constants.py  Exceptions.py  Video.py  Viewer.py
