[tool.poetry]
name = "to-ascii"
version = "5.1.0"
description = "Convert videos, images, gifs, and even live video to ASCII art!"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"
packages = [
    { include = "toascii" }
]
readme = "README.md"
repository = "https://github.com/Iapetus-11/To-ASCII"
keywords = ["ascii", "color", "colors", "ascii-art", "video", "image", "nim"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
colorama = "^0.4.5"
nimporter = { version = "^1.1.0", optional = true}
pydantic = "^1.9.1"

[tool.poetry.extras]
speedups = ["nimporter"]

[tool.poetry.scripts]
toascii = "toascii.cli.cli:main"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.6.1"
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
