[tool.poetry]
name = "to-ascii"
version = "6.0.1"
description = "Convert videos, images, gifs, and even live video to ASCII art!"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"
packages = [
    { include = "toascii" }
]
readme = "README.md"
repository = "https://github.com/Iapetus-11/To-ASCII"
keywords = ["ascii", "color", "colors", "ascii-art", "video", "image", "nim"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
colorama = "^0.4.5"
nimporter = { version = "^1.1.0", optional = true}
pydantic = "^1.9.1"
click = { version = "^8.1.3", optional = true}

[tool.poetry.extras]
speedups = ["nimporter"]
cli = ["click"]

[tool.poetry.scripts]
toascii = "toascii.cli:toascii_command"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
#ignore = ["E501", "E266", "E203", "E741", "W293", "W291"]
target-version = "py38"
