[tool.poetry]
name = "to-ascii"
version = "6.1.0"
description = "Convert videos, images, gifs, and even live video to ASCII art!"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"
packages = [
    { include = "toascii" }
]
readme = "README.md"
repository = "https://github.com/Iapetus-11/To-ASCII"
keywords = ["ascii", "color", "colors", "ascii-art", "video", "image", "nim"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "2.0"
opencv-python = "^4.10.0.84"
colorama = "^0.4.6"
nimporter = { version = "^1.1.0", optional = true}
pydantic = "^1.9.1"
click = "^8.1.8"

[tool.poetry.extras]
speedups = ["nimporter"]
cli = ["click"]

[tool.poetry.scripts]
toascii = "toascii.cli:toascii_command"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"
